--- a/EurekaServerDiscovery/src/main/resources/application.yml
+++ b/EurekaServerDiscovery/src/main/resources/application.yml
@@ -1,2 +1,34 @@
+---
+spring:
+  profiles: primary
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-secondary:8011/eureka,http://eureka-tertiary:8012/eureka
+
 server:
   port: 8010
+
+---
+spring:
+  profiles: secondary
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-primary:8010/eureka,http://eureka-tertiary:8012/eureka
+
+server:
+  port: 8011
+
+---
+spring:
+  profiles: tertiary
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-primary:8010/eureka,http://eureka-secondary:8011/eureka
+server:
+  port: 8012
