--- a/FullSentenceComposer/build.gradle
+++ b/FullSentenceComposer/build.gradle
@@ -36,6 +36,7 @@ dependencyManagement {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
+	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 }
