--- a/FullSentenceComposer/src/main/resources/bootstrap.yml
+++ b/FullSentenceComposer/src/main/resources/bootstrap.yml
@@ -6,3 +6,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8001
+
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
