--- a/NounSentenceComposer/src/main/resources/bootstrap.yml
+++ b/NounSentenceComposer/src/main/resources/bootstrap.yml
@@ -6,7 +6,11 @@ spring:
   cloud:
     config:
       uri: http://localhost:8001
-      
+
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}      
+
 management:
   security:
     enabled: false
