--- a/SubjectSentenceComposer/src/main/resources/bootstrap.yml
+++ b/SubjectSentenceComposer/src/main/resources/bootstrap.yml
@@ -6,6 +6,10 @@ spring:
   cloud:
     config:
       uri: http://localhost:8001
+
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
       
 management:
   security:
