--- a/FullSentenceComposer/build.gradle
+++ b/FullSentenceComposer/build.gradle
@@ -34,6 +34,7 @@ dependencyManagement {
 }
 
 dependencies {
+	compile('org.springframework.cloud:spring-cloud-starter-hystrix')
 	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
