--- a/ConfigData/subject-sentence-composer.yml
+++ b/ConfigData/subject-sentence-composer.yml
@@ -1,1 +1,2 @@
-subjects: I-You-He-She-It-Daniel-Cristina-Victor-Lorena-Carlos-Geraldine-Leonardo-Sol
+properties:
+  subjects: I-You-He-She-It-Daniel-Cristina-Victor-Lorena-Carlos-Geraldine-Leonardo-Sol
