--- a/ConfigData/verb-sentence-composer.yml
+++ b/ConfigData/verb-sentence-composer.yml
@@ -1,1 +1,2 @@
-verbs: saw-broke-bought-exchanged-stole-painted-ran-knew-had
+properties:
+  verbs: saw-broke-bought-exchanged-stole-painted-ran-knew-had
