Spring Cloud Bus implementation using RabbitMQ

--- a/SpringConfigServer/src/main/resources/application.yml
+++ b/SpringConfigServer/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
         git:
           uri: https://github.com/d-amaya/spring-cloud-app.git
           searchPaths: ConfigData
-          
+
 server:
   port: 8001
+
+management:
+  security:
+    enabled: false
