--- a/SpringConfigServer/build.gradle
+++ b/SpringConfigServer/build.gradle
@@ -29,10 +29,11 @@ repositories {
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-config-server')
+	compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR5"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR4"
 	}
 }
